PA-app phone-no submit-btn disabled if no entry

--- a/interfaces/PA-App/src/app/personal-components/phone-number/phone-number.component.html
+++ b/interfaces/PA-App/src/app/personal-components/phone-number/phone-number.component.html
@@ -32,7 +32,7 @@
         <ion-button type="submit"
                     *ngIf="!isDisabled"
                     expand="block"
-                    [disabled]="isDisabled"
+                    [disabled]="isDisabled || !phone"
         >{{ 'personal.phone-number.submit'|translate }}</ion-button>
       </p>
       <p class="ion-margin-top">
