--- a/interfaces/HO-Portal/src/app/app.component.html
+++ b/interfaces/HO-Portal/src/app/app.component.html
@@ -33,6 +33,14 @@
                 {{ 'page.help.pageTitle'|translate }}
               </ion-label>
             </ion-item>
+            <ion-item button="true"
+                      (click)="logout()"
+            >
+              <ion-icon slot="start" name="exit"></ion-icon>
+              <ion-label>
+                {{ 'LOGOUT'|translate }}
+              </ion-label>
+            </ion-item>
           </ion-menu-toggle>
         </ion-list>
 
