--- a/interfaces/HO-Portal/src/app/programs/program-details/program-details.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-details/program-details.component.html
@@ -29,6 +29,14 @@
 
   </section>
   <section>
+    <h2>{{ 'page.programs.program-details.section-payout'|translate }}</h2>
+
+    <app-program-payout [programId]="program?.id"
+                        [fixedTransferValue]="program?.fixedTransferValue"
+    ></app-program-payout>
+
+  </section>
+  <section>
     <h2>{{ 'page.programs.program-details.section-details'|translate }}</h2>
 
     <ion-list lines="full">
