AB#707 Add calculation of total amount in confirmation-alert
Related AB#1222

--- a/interfaces/HO-Portal/src/app/programs/program-details/program-details.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-details/program-details.component.html
@@ -33,6 +33,7 @@
 
     <app-program-payout [programId]="program?.id"
                         [fixedTransferValue]="program?.fixedTransferValue"
+                        [currencyCode]="program?.currency"
     ></app-program-payout>
 
   </section>
