Make TransferValue-input editable + align forms handling via ngModels

--- a/interfaces/HO-Portal/src/app/login/login.page.html
+++ b/interfaces/HO-Portal/src/app/login/login.page.html
@@ -9,29 +9,32 @@
     <ion-row class="ion-align-items-center ion-justify-content-center">
       <ion-col size="4" class="">
 
-          <form method="POST" (submit)="doLogin($event)">
-
+          <form method="POST"
+                (ngSubmit)="doLogin()"
+          >
             <ion-item>
               <ion-label position="stacked">{{ 'page.login.form.email.label'|translate }}</ion-label>
               <ion-input type="email"
-                         name="email"
                          inputmode="email"
                          autocomplete="username email"
                          autocapitalize="off"
                          autofocus="true"
                          clearInput="true"
                          required
+                         name="email"
+                         [(ngModel)]="email"
               ></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="stacked">{{ 'page.login.form.password.label'|translate }}</ion-label>
               <ion-input type="password"
-                         name="password"
                          autocomplete="current-password"
                          autocapitalize="off"
                          clearInput="false"
                          clearOnEdit="false"
                          required
+                         name="password"
+                         [(ngModel)]="password"
               ></ion-input>
             </ion-item>
 
