Use only transferValue inside component + Fix payout-without-change scenario

--- a/interfaces/HO-Portal/src/app/programs/program-details/program-details.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-details/program-details.component.html
@@ -32,7 +32,7 @@
     <h2>{{ 'page.programs.program-details.section-payout'|translate }}</h2>
 
     <app-program-payout [programId]="program?.id"
-                        [fixedTransferValue]="program?.fixedTransferValue"
+                        [transferValue]="program?.fixedTransferValue"
                         [currencyCode]="program?.currency"
     ></app-program-payout>
 
