--- a/interfaces/HO-Portal/src/app/programs/program-people/program-people.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-people/program-people.component.html
@@ -17,3 +17,30 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
+
+
+<ion-content class="ion-padding">
+  <ion-button (click)="submitInclusion()">
+    {{ 'page.programs.program-people.submit'|translate }}
+  </ion-button>
+  <div class="ion-padding">
+    <!-- Theme classes dark, material, bootstrap -->
+    <ngx-datatable  #people
+      class="material"
+      [limit]="50"
+      [rows]="enrolledPeople"
+      [rowHeight]="auto"
+      [columns]="columns"
+      [columnMode]="'flex'"
+      [columnWidth]="30"
+      [sortType]="'multi'"
+      [headerHeight]="50"
+      [footerHeight]="50"
+      [selected]="selected"
+      [selectionType]="'checkbox'"
+    >
+    </ngx-datatable>
+
+  </div>
+
+</ion-content>
