Add translatable messages to datatable

--- a/interfaces/HO-Portal/src/app/programs/program-people/program-people.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-people/program-people.component.html
@@ -35,6 +35,7 @@
                  [columns]="columns"
                  [rows]="enrolledPeople"
                  [selected]="selectedPeople"
+                 [messages]="tableMessages"
   ></ngx-datatable>
 
   <ion-button (click)="submitInclusion()"
