Tweaks to ngx-datatable options

--- a/interfaces/HO-Portal/src/app/programs/program-people/program-people.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-people/program-people.component.html
@@ -39,6 +39,7 @@
   ></ngx-datatable>
 
   <ion-button (click)="submitInclusion()"
+              [disabled]="!selectedPeople.length"
               class="ion-float-end"
   >
     {{ 'page.programs.program-people.submit'|translate }}
