--- a/interfaces/HO-Portal/src/app/programs/program-details/program-details.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-details/program-details.component.html
@@ -44,6 +44,10 @@
       {{ 'page.programs.program-details.manage-people'|translate }}
     </ion-button>
 
+    <ion-button [routerLink]="['/program', program?.id, 'people-privacy']">
+      {{ 'page.programs.program-details.manage-people-privacy'|translate }}
+    </ion-button>
+
   </section>
   <section>
     <h2>{{ 'page.programs.program-details.section-details'|translate }}</h2>
