--- a/interfaces/PA-App/src/app/personal-components/meeting-reminder/meeting-reminder.component.html
+++ b/interfaces/PA-App/src/app/personal-components/meeting-reminder/meeting-reminder.component.html
@@ -30,10 +30,9 @@
     </ul>
 
     <p>
-      <ion-button type="button" size="small">
-        <ion-icon name="information-circle-outline" slot="start"></ion-icon>
+      <more-info-button [message]="'personal.meeting-reminder.info-message'|translate">
         {{ 'personal.meeting-reminder.more-info-documents'|translate }}
-      </ion-button>
+      </more-info-button>
     </p>
     <p>
       {{ 'personal.meeting-reminder.qr-code'|translate }}
