--- a/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
@@ -4,10 +4,9 @@
       {{ 'personal.select-program.introduction'|translate }}
     </p>
     <p>
-      <ion-button type="button" size="small">
-        <ion-icon name="information-circle-outline" slot="start"></ion-icon>
+      <more-info-button [message]="'personal.select-program.info-message'|translate">
         {{ 'personal.select-program.more-info-programs'|translate }}
-      </ion-button>
+      </more-info-button>
     </p>
   </dialogue-turn>
   <dialogue-turn actor="self">
