Refactor Program-People component
- more DRY
- specifics out of implementations
- early returns
- type definitions
- etc.

--- a/interfaces/HO-Portal/src/app/programs/program-people/program-people.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-people/program-people.component.html
@@ -12,10 +12,10 @@
         <ion-icon name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title *ngIf="!privacy">
+    <ion-title *ngIf="!showSensitiveData">
       {{ 'page.programs.program-people.pageTitle'|translate }}
     </ion-title>
-    <ion-title *ngIf="privacy">
+    <ion-title *ngIf="showSensitiveData">
       {{ 'page.programs.program-people.pageTitlePrivacy'|translate }}
     </ion-title>
   </ion-toolbar>
@@ -23,10 +23,10 @@
 
 
 <ion-content class="ion-padding">
-  <p *ngIf="noConnections">
+  <p *ngIf="!enrolledPeople?.length && !showSensitiveData">
     {{ 'page.programs.program-people.noConnections'|translate }}
   </p>
-  <p *ngIf="noConnectionsPrivacy">
+  <p *ngIf="!enrolledPeople?.length && showSensitiveData">
     {{ 'page.programs.program-people.noConnectionsPrivacy'|translate }}
   </p>
 
