Use ConfirmPrompt for Inclusion-submit

--- a/interfaces/HO-Portal/src/app/programs/program-people/program-people.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-people/program-people.component.html
@@ -47,11 +47,10 @@
                  [messages]="tableMessages"
   ></ngx-datatable>
 
-  <ion-button (click)="submitInclusion()"
-              [disabled]="!enrolledPeople.length"
-              class="ion-float-end"
+  <confirm-prompt [disabled]="!enrolledPeople.length"
+                  [confirmAction]="submitInclusion"
+                  class="ion-float-end"
   >
     {{ 'page.programs.program-people.submit'|translate }}
-  </ion-button>
-
+  </confirm-prompt>
 </ion-content>
