Style MoreInfoPopup as a (small) Modal window

--- a/interfaces/PA-App/src/app/app.scss
+++ b/interfaces/PA-App/src/app/app.scss
@@ -22,3 +22,12 @@
 ion-textarea {
   --background: #dfe5fe !important;
 }
+
+
+// InfoPopup triggered by MoreInfoButtons shouldn't take up the full screen
+ion-modal.more-info-popup {
+  --max-width: 90vw;
+  --max-height: 80vh;
+}
+
+
