Add custom heading to all MoreInfoButton implementations

--- a/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
@@ -4,7 +4,9 @@
         {{ 'personal.create-identity.introduction'|translate }}
       </p>
       <p>
-        <more-info-button [message]="'personal.create-identity.info-message'|translate">
+        <more-info-button [message]="'personal.create-identity.info-message'|translate"
+                          [heading]="'personal.create-identity.more-info-digital-id'|translate"
+        >
           {{ 'personal.create-identity.more-info-digital-id'|translate }}
         </more-info-button>
       </p>
@@ -17,7 +19,9 @@
         {{ 'personal.create-identity.password-only'|translate }}
       </p>
       <p>
-        <more-info-button [message]="'personal.create-identity.info-message-password'|translate">
+        <more-info-button [message]="'personal.create-identity.info-message-password'|translate"
+                          [heading]="'personal.create-identity.more-info-password'|translate"
+        >
           {{ 'personal.create-identity.more-info-password'|translate }}
         </more-info-button>
       </p>
@@ -30,7 +34,9 @@
         {{ 'personal.create-identity.username-password'|translate }}
       </p>
       <p>
-        <more-info-button [message]="'personal.create-identity.info-message-username-pw'|translate">
+        <more-info-button [message]="'personal.create-identity.info-message-username-pw'|translate"
+                          [heading]="'personal.create-identity.more-info-username-pw'|translate"
+        >
           {{ 'personal.create-identity.more-info-username-pw'|translate }}
         </more-info-button>
       </p>
