--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -7,7 +7,9 @@
       {{ 'personal.enroll-in-program.introduction-questions'|translate }}
     </p>
     <p>
-      <more-info-button [message]="'personal.enroll-in-program.info-message'|translate">
+      <more-info-button [message]="'personal.enroll-in-program.info-message'|translate"
+                        [heading]="'personal.enroll-in-program.more-info-questions'|translate"
+      >
         {{ 'personal.enroll-in-program.more-info-questions'|translate }}
       </more-info-button>
     </p>
@@ -98,7 +100,9 @@
       {{ 'personal.enroll-in-program.please-confirm'|translate }}
     </p>
     <p>
-      <more-info-button [message]="'personal.enroll-in-program.info-message-share'|translate">
+      <more-info-button [message]="'personal.enroll-in-program.info-message-share'|translate"
+                        [heading]="'personal.enroll-in-program.more-info-share'|translate"
+      >
         {{ 'personal.enroll-in-program.more-info-share'|translate }}
       </more-info-button>
     </p>
