--- a/interfaces/PA-App/src/app/personal-components/meeting-reminder/meeting-reminder.component.html
+++ b/interfaces/PA-App/src/app/personal-components/meeting-reminder/meeting-reminder.component.html
@@ -30,7 +30,9 @@
     </ul>
 
     <p>
-      <more-info-button [message]="'personal.meeting-reminder.info-message'|translate">
+      <more-info-button [message]="'personal.meeting-reminder.info-message'|translate"
+                        [heading]="'personal.meeting-reminder.more-info-documents'|translate"
+      >
         {{ 'personal.meeting-reminder.more-info-documents'|translate }}
       </more-info-button>
     </p>
