--- a/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
@@ -4,7 +4,9 @@
       {{ 'personal.select-program.introduction'|translate }}
     </p>
     <p>
-      <more-info-button [message]="'personal.select-program.info-message'|translate">
+      <more-info-button [message]="'personal.select-program.info-message'|translate"
+                        [heading]="'personal.select-program.more-info-programs'|translate"
+      >
         {{ 'personal.select-program.more-info-programs'|translate }}
       </more-info-button>
     </p>
