--- a/interfaces/PA-App/src/app/personal-components/signup-signin/signup-signin.component.html
+++ b/interfaces/PA-App/src/app/personal-components/signup-signin/signup-signin.component.html
@@ -4,7 +4,9 @@
       {{ 'personal.signup-signin.introduction'|translate }}
     </p>
     <p>
-      <more-info-button [message]="'personal.signup-signin.info-message'|translate">
+      <more-info-button [message]="'personal.signup-signin.info-message'|translate"
+                        [heading]="'personal.signup-signin.more-info-digital-id'|translate"
+      >
         {{ 'personal.signup-signin.more-info-digital-id'|translate }}
       </more-info-button>
     </p>
