--- a/interfaces/PA-App/src/app/personal-components/select-appointment/select-appointment.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-appointment/select-appointment.component.html
@@ -4,7 +4,9 @@
       {{ 'personal.select-appointment.introduction'|translate }}
     </p>
     <p>
-      <more-info-button [message]="'personal.select-appointment.info-message'|translate">
+      <more-info-button [message]="'personal.select-appointment.info-message'|translate"
+                        [heading]="'personal.select-appointment.more-info-activation'|translate"
+      >
         {{ 'personal.select-appointment.more-info-activation'|translate }}
       </more-info-button>
     </p>
