--- a/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
@@ -2,7 +2,9 @@
   <dialogue-turn>
     <p [innerHTML]="'personal.select-language.introduction'|translate"></p>
     <p>
-      <more-info-button [message]="'personal.select-language.info-message'|translate">
+      <more-info-button [message]="'personal.select-language.info-message'|translate"
+                        [heading]="'personal.select-language.more-info'|translate"
+      >
         {{ 'personal.select-language.more-info'|translate }}
       </more-info-button>
     </p>
