Changed input to ionInput  AB#1329

--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -43,7 +43,7 @@
                    inputmode="numeric"
                    pattern="[0-9]*"
                    [name]="question.code"
-                   (input)="inputAnswers($event)"
+                   (ionInput)="inputAnswers($event)"
                    (change)="changeAnswers($event)"
                    [value]="answers[question.code]?.value"
                    [disabled]="hasAnswered"
@@ -61,7 +61,7 @@
       <div *ngSwitchDefault>
         <ion-input type="text"
                    [name]="question.code"
-                   (input)="inputAnswers($event)"
+                   (ionInput)="inputAnswers($event)"
                    (change)="changeAnswers($event)"
                    [value]="answers[question.code]?.value"
                    [disabled]="hasAnswered"
