--- a/interfaces/PA-App/src/app/app.scss
+++ b/interfaces/PA-App/src/app/app.scss
@@ -14,6 +14,12 @@
   margin: auto;
 }
 
+// Additional text-utility
+.ion-text-ellipsis {
+  overflow:hidden;
+  text-overflow: ellipsis;
+}
+
 // ----------------------------------------------------------------------------
 
 // Override default styles to emphasize where to input
