Use PasswordToggleInput in login-identity-component

--- a/interfaces/PA-App/src/app/personal-components/login-identity/login-identity.component.html
+++ b/interfaces/PA-App/src/app/personal-components/login-identity/login-identity.component.html
@@ -26,18 +26,15 @@
         </div>
       </div>
       <div *ngIf="usernameSubmitted" class="ion-margin-bottom">
-        <ion-label>{{ 'personal.login-identity.supply-password'|translate }}</ion-label>
-        <ion-item>
-          <ion-input [type]="getPasswordType()"
-                   name="password"
-                   [(ngModel)]="password"
-                   ngDefaultControl
-                   [disabled]="isDisabled"
-                   autocomplete="new-password"
-          ></ion-input>
-          <ion-icon *ngIf="isActiveToggleTextPassword" name="eye" item-right (click)="toggleTextPassword()"></ion-icon>
-          <ion-icon *ngIf="!isActiveToggleTextPassword" name="eye-off" item-right (click)="toggleTextPassword()"></ion-icon>
-        </ion-item>
+        <password-toggle-input name="password"
+                               [(ngModel)]="password"
+                               ngDefaultControl
+                               [disabled]="isDisabled"
+                               autocomplete="current-password"
+                               [label]="'personal.login-identity.supply-password'|translate"
+                               [labelShow]="'password-toggle.show'|translate"
+                               [labelHide]="'password-toggle.hide'|translate"
+        ></password-toggle-input>
       </div>
       <div class="ion-margin-top">
         <ion-button *ngIf="password && !isDisabled"
